--- a/AsyncTwitch/AsyncTwitch.csproj
+++ b/AsyncTwitch/AsyncTwitch.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="IllusionInjector">
+      <HintPath>..\..\Resources\IllusionInjector.dll</HintPath>
+    </Reference>
+    <Reference Include="IllusionPlugin">
+      <HintPath>..\..\Resources\IllusionPlugin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,8 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncTwitch.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Plugin.cs" />
     <Compile Include="ChatUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IRCConnection.cs" />
     <Compile Include="TwitchConnection.cs" />
     <Compile Include="TwitchEmote.cs" />
     <Compile Include="TwitchMessage.cs" />
